--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/greg-a/bamazon#readme",
   "dependencies": {
     "inquirer": "^7.2.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "table": "^5.4.6"
   }
 }
